adding PR checks (#229)
* adding PR checks

* fixing pr pipeline

* Adding UT's

* lint issues fix

---------

Co-authored-by: Anshul Goel <anshul.goel@procucev.com>